src/components/fileTree/styles.css
.FileTree {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.FileTree .title {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.FileTree .title .icon {
    fill: #e8e8e8;
}

.FileTree .rootTitle {
    background-color: #383838;
    color: #CCCCCC;
    height: 20px;
    padding-left: 4px;
    cursor: pointer;
    font-weight: 600;
    font-size: 11px;
    text-transform: uppercase;
    box-shadow: 1px 1px 3px black;
}

.FileTree .rootContent {
    height: inherit;
    overflow-y: auto;
}

.FileTree .node {
    height: 22px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    color: #CBCBCB;
    cursor: pointer;
}

.FileTree .node .title {
    font-size: 13px;
}

.FileTree .node:hover {
    background-color: #2A2D2E;
}

.FileTree .node.active, .FileTree .node.active:hover {
    background-color: #094771;
}

.FileTree .subnodes:not(.no-padding), .FileTree .subnodes .node {
    padding-left: 13px;
}

